discussion/kv_engine/173472/173472_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the (same) I/O
task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-25 12:34:01.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-25 13:23:43.000000000
Message: 
Patch Set 14: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38296/ : FAILURE

CMake error: CMakeLists.txt:134 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38296/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38296/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16943/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ContinueState> syncedContinueState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16943/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16943/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45583/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [15/44]: set with meta...(11 ms) SKIPPED


99% tests passed, 1 tests failed out of 427

Total Test time (real) = 255.82 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45583/ )

Timeout of a CTest test 427/427 Test #310: ep_testsuite_xdcr.ephemeral.comp_passive ................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19769/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18727/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-25T12:41:39.955Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:41:39.955Z] Expected equality of these values:
[2022-04-25T12:41:39.955Z]   100
[2022-04-25T12:41:39.955Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:41:39.955Z]     Which is: 96
[2022-04-25T12:41:39.955Z] vb:0 not fully resident after eviction
[2022-04-25T12:41:39.955Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T12:41:39.955Z] Expected equality of these values:
[2022-04-25T12:41:39.955Z]   100
[2022-04-25T12:41:39.955Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T12:41:39.955Z]     Which is: 97
[2022-04-25T12:41:39.955Z] vb:1 not fully resident after eviction
[2022-04-25T12:41:39.955Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (756 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18727/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27142/ : FAILURE

Failure of GoogleTest "TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-04-25T12:48:10.487Z] unknown file: Failure
[2022-04-25T12:48:10.487Z] C++ exception with description "Failed to mutateWithMeta TransportProtocols_GetSetTest_ServerRejectsLargeSizeWithXattrCompressed_McbpSsl_XattrYes_JsonYes_SnappyYes : Temporary failure (134)" thrown in the test body.
[2022-04-25T12:48:10.487Z] [  FAILED  ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (285 ms)
TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27142/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27142/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17847/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17847/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15911/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6602/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19071/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6694/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
